# bachelor-project-uvt-dct

./: .env-example  .gitignore  Cargo.toml  README.md  TODO.md  TODO_GUI.md  compile.sh  dct  install-instructions.txt  run.sh  sample-data.sql
assets/: main.css
assets/classes/: foo.txt
benches/: benchmark.rs  db_operations_benchmark.rs  redis_benchmark.rs
migrations/: sample-data.sql
src/: DB.sql  DEPENDENCIED.md  collect_with_capacity.rs  constant_parse.rs  constants.rs  error.rs  lib.rs  main.rs
src/endpoints/: administration.rs  auth.rs  choices.rs  classes.rs  classes_files.rs  common.rs  faculties.rs  index.rs  mod.rs  open_close_date.rs
src/static/: admin-login.html  student-login.html
templates/: choice_pick.stpl  class.stpl  class_create.stpl  class_edit.stpl  class_view.stpl  classes_filter.stpl  faculties.stpl  faculty_create.stpl  faculty_edit.stpl  files.stpl  header.stpl  index.stpl  login.stpl  open_close_date.stpl
templates/classes/: create.stpl  edit.stpl  filter.stpl  view.stpl
templates/components/: class.stpl  faculty_select.stpl  files.stpl
templates/faculties/: create.stpl  edit.stpl  faculties.stpl
tests/: accounts.rs  choices.rs  classes.rs  dates.rs  db.rs  integration_test.rs  mod.rs  student_choices.rs
tests/unit/: auth_test.rs  boundary_test.rs  collect_with_capacity_test.rs  db_boundary_test.rs  error_test.rs  http_boundary_test.rs  mod.rs
