[package]
name = "dct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["multipart", "macros"] }
axum-macros = "0.4.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
rand = "0.8.5"
sailfish = "0.8.3"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["sqlx-postgres", "runtime-tokio", "uuid", "time", "postgres", "chrono"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["uuid", "tokio", "fs", "trace", "compression-gzip"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing", "chrono", "json"] }
uuid = { version = "1.7.0", features = ["v4", "v7", "serde", "zerocopy"] }
validator = { version = "0.18.1", features = ["derive"] }
tower = "0.4.13"
hyper = "1.3.1"
csv = "1.3.0"
serde_json = "1.0.117"
const_format = "0.2.32"
chrono-tz = "0.9.0"
sailfish-minify = "0.2.2"
bincode = "1.3.3"
redis = { version = "0.25.4", features = ["tokio-comp"] }
redis_pool = "0.4.0"
mockall = "0.13.1"
mockito = "1.7.0"

[profile.release]
#debug = true # For flamegraph

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
strip = true
overflow-checks = false
